<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="org.pltw.examples.synthesizer.SynthesizerActivity">

    <Button
        android:id="@+id/aButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="26dp"
        android:onClick="onClickaButton"
        android:text="@string/aButton" />

    <Button
        android:id="@+id/bButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/aButton"
        android:layout_below="@+id/aButton"
        android:onClick="onClickbButton"
        android:text="@string/bButton" />

    <Button
        android:id="@+id/bbButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bButton"
        android:layout_below="@+id/bButton"
        android:onClick="onClickbbButton"
        android:text="@string/bbButton" />

    <Button
        android:id="@+id/cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bbButton"
        android:layout_below="@+id/bbButton"
        android:onClick="onClickcButton"
        android:text="@string/cButton" />

    <Button
        android:id="@+id/csButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cButton"
        android:layout_below="@+id/cButton"
        android:onClick="onClickcsButton"
        android:text="@string/csButton" />

    <Button
        android:id="@+id/dButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/bButton"
        android:layout_below="@+id/csButton"
        android:onClick="onClickdButton"
        android:text="@string/dButton" />

    <Button
        android:id="@+id/dsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dButton"
        android:layout_below="@+id/dButton"
        android:onClick="onClickdsButton"
        android:text="@string/dsButton" />

    <Button
        android:id="@+id/eButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dsButton"
        android:layout_below="@+id/dsButton"
        android:onClick="onClickeButton"
        android:text="@string/eButton" />

    <Button
        android:id="@+id/fButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fsButton"
        android:layout_below="@+id/highgButton"
        android:onClick="onClickfButton"
        android:text="@string/fButton" />

    <Button
        android:id="@+id/fsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/aButton"
        android:layout_alignBottom="@+id/aButton"
        android:layout_alignEnd="@+id/gButton"
        android:onClick="onClickfsButton"
        android:text="@string/fsButton" />

    <Button
        android:id="@+id/gButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/highfButton"
        android:layout_below="@+id/fsButton"
        android:onClick="onClickgButton"
        android:text="@string/gButton" />

    <Button
        android:id="@+id/gsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gButton"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/bbButton"
        android:onClick="onClickgsButton"
        android:text="@string/gsButton" />

    <Button
        android:id="@+id/higheButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gsButton"
        android:layout_centerHorizontal="true"
        android:onClick="onClickhigheButton"
        android:text="@string/higheButton" />

    <Button
        android:id="@+id/highfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/highfsButton"
        android:layout_below="@+id/higheButton"
        android:onClick="onClickhighfButton"
        android:text="@string/highfButton" />

    <Button
        android:id="@+id/highfsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/higheButton"
        android:layout_below="@+id/highfButton"
        android:onClick="onClickhighfsButton"
        android:text="@string/highfsButton" />

    <Button
        android:id="@+id/highgButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/gsButton"
        android:layout_below="@+id/highfsButton"
        android:onClick="onClickhighgButton"
        android:text="@string/highgButton" />

    <Button
        android:id="@+id/challengeOneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/eButton"
        android:layout_below="@+id/eButton"
        android:onClick="onClickchallengeOneButton"
        android:text="@string/challengeOneButton" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fsButton"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/highfsButton" />

    <NumberPicker
        android:id="@+id/numberPicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fButton"
        android:layout_alignStart="@+id/numberPicker" />

    <Button
        android:id="@+id/onTwinkleClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/onSelectedNoteClickButton"
        android:layout_below="@+id/onSelectedNoteClickButton"
        android:onClick="onTwinkleClick"
        android:text="@string/TwinkleButton" />

    <Button
        android:id="@+id/onSelectedNoteClickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/challengeOneButton"
        android:layout_below="@+id/challengeOneButton"
        android:layout_marginTop="8dp"
        android:onClick="onSelectedNoteClick"
        android:text="@string/SelectedNoteButton" />

    <NumberPicker
        android:id="@+id/numberPicker3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/numberPicker2"
        android:layout_below="@+id/numberPicker2"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fsButton"
        android:layout_toEndOf="@+id/highgButton"
        android:text="Note Chooser" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/numberPicker"
        android:layout_below="@+id/numberPicker"
        android:text="# of times" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberPicker2"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/highfsButton"
        android:text="line 2 # of times" />

    <CheckBox
        android:id="@+id/checkBox"
        android:onClick="checkone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/highfButton"
        android:layout_below="@+id/onTwinkleClick"
        android:text="line 2?" />

    <Button
        android:id="@+id/onFavoriteClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onTwinkleClick"
        android:layout_toStartOf="@+id/highgButton"
        android:onClick="onFavoriteClick"
        android:text="@string/FavoriteButton" />

    <!--<Button-->
        <!--android:id="@+id/challengeTwoButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignEnd="@+id/challengeOneButton"-->
        <!--android:layout_below="@+id/challengeOneButton"-->
        <!--android:onClick="challengeTwoButton"-->
        <!--android:text="@string/challengeTwoButton" />-->


</RelativeLayout>
